## V1.1
- Added variable delay to alt tab back in
- Added HoneyBadgers icon